--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ I constantly strive to grow my skills in areas such as web development, database
 
 I'm also driven by a desire to help others grow by sharing knowledge and creating a positive, hands-on tech environment. My goal is to turn every simple idea into a meaningful, impactful solution.</p>
             <div class="btn-sci">
-                <a href="#" class="btn">Download CV</a>
+                <a href="cv.html" class="btn">Download CV</a>
                 <div class="sci">
                     <a href="https://github.com/Wellygh"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/waleed-ghazwani-407725305"><i class='bx bxl-linkedin'></i></a>
