--- a/Contact.html
+++ b/Contact.html
@@ -40,7 +40,7 @@
             <p>
                 <span class="ai-phone"></span>Phone: +966537830392</p>
             <div class="btn-sci">
-                <a href="cv.html" class="btn">Download CV</a>
+                <a href="cv.pdf" class="btn">Download CV</a>
                 <div class="sci">
                     <a href="https://github.com/Wellygh"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/waleed-ghazwani-407725305"><i class='bx bxl-linkedin'></i></a>
