--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <div class="sci">
                     <a href="https://github.com/Wellygh"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/waleed-ghazwani-407725305"><i class='bx bxl-linkedin'></i></a>
+                <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
                 </div>
             </div>
