--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <a href="https://github.com/Wellygh"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/waleed-ghazwani-407725305"><i class='bx bxl-linkedin'></i></a>
                 <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+                    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="HORIZONTAL" data-vanity="waleed-ghazwani-407725305" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://sa.linkedin.com/in/waleed-ghazwani-407725305?trk=profile-badge">WALEED GHAZWANI</a></div>
 
                 </div>
             </div>
